fixes for two tabs on hosted page. makes video names visible and autohides camera buttons after use.

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body, html {
 }
 
 input {
-	width: 50%;
+	width: 75%;
 	height: 2em;
 }
 
@@ -24,6 +24,16 @@ details {
 	width: 50%;
 }
 
+#options {
+	float:right;
+	margin-right: 25vw;
+}
+
+#options2 {
+	float:right;
+	margin-right: 25vw;
+}
+
 #video0 {
 	z-index: 10;
 }
@@ -40,6 +50,7 @@ details {
 
 #videos {
 	pointer-events: none;
+
 }
 
 .cb_video {
